# ITKR2

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  cleanup  confdefs.h  configure  configure.ac  configure.win
R/: ITKR2-package.R
inst/ITK/: version
man/: itk_info.Rd
src/: Makevars.in
tools/: cmake_call.sh  unpack_itk.R
